--- a/app/templates/sections/banner.html
+++ b/app/templates/sections/banner.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-<div class="relative h-screen">
+<div class="relative h-screen z-10">
     <!-- Background Image and Gradient Layer -->
     <div class="absolute inset-0 bg-cover bg-center" style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0.95), rgba(38, 38, 38, 0.8)), url('/static/images/banner.jpeg');"></div>
     
@@ -17,7 +17,10 @@
         <!-- Left Side: Book Now Button -->
         <div class="w-1/3 flex flex-col items-center justify-center mt-90 ml-40">
             <div id="bookNowContainer"
-                    class="bg-gray border border-white rounded-[20px] px-10 py-7 hover:border-blue-600 mb-5">
+                    class="bg-gray border border-white rounded-[20px] px-10 py-7 hover:border-white mb-5 backdrop-blur-lg 
+                        shadow-[0_0_8px_rgba(255,255,255,0.3)] 
+                        hover:shadow-[0_0_12px_rgba(255,255,255,0.6)] 
+                        transition duration-300">
                 <a href="{{ url_for('routes.LOGIN') }}" class="text-5xl text-white font-playfair text-center block transition-colors">
                     Book Now
                 </a>
