--- a/app/static/css/calendar.css
+++ b/app/static/css/calendar.css
@@ -30,18 +30,19 @@
   }
 }
 .day:hover {
-    border-width: 2px;
+    border-width: 3px;
+    border-radius: 8px;
     border-color: black;
     background-color: #ffffff; 
     color: rgb(0, 0, 0);
     cursor: pointer;
 }
 .selected {
-    border-width: 2px;
+    border-width: 3px;
     border-color: rgb(0, 0, 0);
     background-color: #ffffff; 
     color: rgb(0, 0, 0);
-    border-radius: 4px;
+    border-radius: 8px;
     
 }
 .time {
@@ -50,14 +51,20 @@
 }
 
 .today {
-    background-color: #000000;
-    color: rgb(255, 248, 248); 
-    border-color: white;
-    border-width: 2px;
-    border-radius: 4px;
+    background-color: oklch(88.2% 0.059 254.128);
+    color: rgb(0, 0, 0); 
+    border-color: rgb(0, 0, 0);
+    border-width: 3px;
+    border-radius: 8px;
 }
 
 .date {
     background-color: #ffffff; 
     color: #000000;
+}
+#calendarDays {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    max-height: 400px; /* Adjust as needed */
+    overflow-y: auto;
 }
